--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import '../assets/styles/index.css'
-import HomePage from '../modules/home-page'
+import AboutPage from '../modules/about-page'
 ---
 
-<Layout>
-  <HomePage client:load />
+<Layout title="About Us">
+  <AboutPage />
 </Layout>
