--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import '../assets/styles/index.css'
-import HomePage from '../modules/home-page'
+import ContactPage from '../modules/contact-page'
 ---
 
-<Layout>
-  <HomePage client:load />
+<Layout title="Contact Us">
+  <ContactPage />
 </Layout>
