--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,9 +8,18 @@ const { title } = Astro.props
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Eagle Music services helps connect you to reputable, reliable forms of entertainment for any and all your events"
+    />
+    <meta
+      name="keywords"
+      content="Eagle, Music, Services, Entertainment, Booking, Bands, Weddings, Events, Coorporate, Reliable, Responsible, Affordable"
+    />
+    <meta name="author" content="905 Dev Shop" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
