--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,17 @@
 ---
-import Layout from '../layouts/Layout.astro'
 import '../assets/styles/index.css'
+import Layout from '../layouts/Layout.astro'
 import HomePage from '../modules/home-page'
+import AboutPage from '../modules/about-page'
+import ServicesPage from '../modules/services-page'
 ---
 
 <Layout>
-  <HomePage client:load />
+  <main
+    class="scroll-smooth h-screen overflow-y-scroll overflow-x-hidden snap-y snap-mandatory"
+  >
+    <HomePage client:load />
+    <AboutPage client:load />
+    <ServicesPage />
+  </main>
 </Layout>
