--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -26,6 +26,10 @@
     @apply hover:brightness-90;
   }
 
+  p {
+    @apply text-2xl text-gray-400 font-extralight leading-relaxed
+  }
+
   span {
     @apply text-transparent bg-clip-text bg-gradient-to-r from-white to-accent
   }
