using avif images

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ import ContactPage from '../modules/contact-page'
   <main
     class="scroll-smooth h-screen overflow-y-scroll overflow-x-hidden snap-y snap-mandatory"
   >
-    <HomePage client:load />
-    <AboutPage client:load />
+    <HomePage />
+    <AboutPage />
     <ServicesPage />
-    <ContactPage client:load />
+    <ContactPage client:visible />
   </main>
 </Layout>
