--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ import ContactPage from '../modules/contact-page'
   <main
     class="h-screen overflow-x-hidden overflow-y-scroll scroll-smooth snap-y snap-mandatory"
   >
-    <HomePage />
-    <AboutPage />
-    <ServicesPage client:visible />
+    <!-- <HomePage /> -->
+    <!-- <AboutPage />
+    <ServicesPage client:visible /> -->
     <ContactPage client:visible />
   </main>
 </Layout>
