mobile nav jacket

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import ContactPage from '../modules/contact-page'
 
 <Layout>
   <main
-    class="h-screen overflow-x-hidden overflow-y-scroll scroll-smooth snap-y snap-mandatory"
+    class="h-screen overflow-x-hidden overflow-y-scroll scroll-smooth snap-y snap-mandatory scrollbar-hide"
   >
     <HomePage client:load />
     <!-- <AboutPage />
