--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import ContactPage from '../modules/contact-page'
     class="h-screen overflow-x-hidden overflow-y-scroll scroll-smooth snap-y snap-mandatory scrollbar-hide"
   >
     <HomePage client:load />
-    <!-- <AboutPage />
-    <ServicesPage client:visible /> -->
+    <AboutPage />
+    <!-- <ServicesPage client:visible />  -->
     <ContactPage client:visible />
   </main>
 </Layout>
