--- a/src/components/Nav/MobileNavIcon/styles.css
+++ b/src/components/Nav/MobileNavIcon/styles.css
@@ -1,5 +1,5 @@
-#nav-icon4 {
-  width: 30px;
+#nav-icon {
+  width: 25px;
   height: 25px;
   position: relative;
   transform: rotate(0deg);
@@ -7,7 +7,7 @@
   cursor: pointer;
 }
 
-#nav-icon4 span {
+#nav-icon span {
   display: block;
   position: absolute;
   height: 2px;
@@ -20,34 +20,34 @@
   transition: 0.25s ease-in-out;
 }
 
-#nav-icon4 span:nth-child(1) {
+#nav-icon span:nth-child(1) {
   top: 0px;
   transform-origin: left center;
 }
 
-#nav-icon4 span:nth-child(2) {
-  top: 10px;
+#nav-icon span:nth-child(2) {
+  top: 8px;
   transform-origin: left center;
 }
 
-#nav-icon4 span:nth-child(3) {
-  top: 20px;
+#nav-icon span:nth-child(3) {
+  top: 16px;
   transform-origin: left center;
 }
 
-#nav-icon4.open-icon span:nth-child(2) {
+#nav-icon.open-icon span:nth-child(2) {
   width: 0%;
   opacity: 0;
 }
 
-#nav-icon4.open-icon span:nth-child(1) {
+#nav-icon.open-icon span:nth-child(1) {
   transform: rotate(45deg);
   top: -1px;
   left: 5px;
 }
 
-#nav-icon4.open-icon span:nth-child(3) {
+#nav-icon.open-icon span:nth-child(3) {
   transform: rotate(-45deg);
-  top: 20px;
+  top: 17px;
   left: 5px;
 }
