--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -19,7 +19,7 @@
   }
 
   h3 {
-    @apply text-white font-extrabold text-5xl;
+    @apply text-white font-extrabold text-4xl lg:text-5xl tracking-wide;
   }
 
   h4, h5 {
